<resources>
    <string name="app_name">Covid-19 World Statistics</string>

    <string name="toolbar_title">Covid-19 World Statistics</string>
    <string name="global">Global</string>
    <string name="totalConfirmed">Total confirmed</string>
    <string name="totalDeaths">Total deaths</string>
    <string name="totalRecovered">Total recovered</string>
    <string name="lastUpdate">Last update</string>

    <string name="all">All countries</string>
</resources>
