<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/border_layout"
    android:padding="@dimen/defaultSpace">

    <TextView
        android:id="@+id/title_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textCardColor"
        android:textSize="@dimen/titleSize"
        app:layout_constraintBottom_toTopOf="@id/global_confirmed_container"
        app:layout_constraintEnd_toEndOf="@id/mainContainer"
        app:layout_constraintStart_toStartOf="@id/mainContainer"
        app:layout_constraintTop_toTopOf="@id/mainContainer"
        tools:text="Title" />

    <LinearLayout
        android:id="@+id/global_confirmed_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailSpace"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/global_deaths_container"
        app:layout_constraintEnd_toEndOf="@id/mainContainer"
        app:layout_constraintLeft_toLeftOf="@id/mainContainer"
        app:layout_constraintRight_toRightOf="@id/mainContainer"
        app:layout_constraintStart_toStartOf="@id/mainContainer"
        app:layout_constraintTop_toBottomOf="@id/title_card">

        <TextView
            android:id="@+id/global_total_confirmed_text_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalConfirmed"
            android:textColor="@color/textCardColor"
            android:textSize="@dimen/detailSize" />

        <TextView
            android:id="@+id/global_total_confirmed_value_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textCardColor"
            android:textSize="@dimen/detailSize"
            tools:text="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/global_deaths_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailSpace"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/global_recovered_container"
        app:layout_constraintEnd_toEndOf="@id/mainContainer"
        app:layout_constraintLeft_toLeftOf="@id/mainContainer"
        app:layout_constraintRight_toRightOf="@id/mainContainer"
        app:layout_constraintStart_toStartOf="@id/mainContainer"
        app:layout_constraintTop_toBottomOf="@id/global_confirmed_container">

        <TextView
            android:id="@+id/global_total_deaths_text_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalDeaths"
            android:textColor="@color/textCardColor"
            android:textSize="@dimen/detailSize" />

        <TextView
            android:id="@+id/global_total_deaths_value_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textCardColor"
            android:textSize="@dimen/detailSize"
            tools:text="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/global_recovered_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailSpace"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/mainContainer"
        app:layout_constraintLeft_toLeftOf="@id/mainContainer"
        app:layout_constraintRight_toRightOf="@id/mainContainer"
        app:layout_constraintStart_toStartOf="@id/mainContainer"
        app:layout_constraintTop_toBottomOf="@id/global_deaths_container">

        <TextView
            android:id="@+id/global_total_recovered_text_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalRecovered"
            android:textColor="@color/textCardColor"
            android:textSize="@dimen/detailSize" />

        <TextView
            android:id="@+id/global_total_recovered_value_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textCardColor"
            android:textSize="@dimen/detailSize"
            tools:text="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/global_updated_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailSpace"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/mainContainer"
        app:layout_constraintEnd_toEndOf="@id/mainContainer"
        app:layout_constraintLeft_toLeftOf="@id/mainContainer"
        app:layout_constraintRight_toRightOf="@id/mainContainer"
        app:layout_constraintStart_toStartOf="@id/mainContainer"
        app:layout_constraintTop_toBottomOf="@id/global_recovered_container">

        <TextView
            android:id="@+id/global_last_update_text_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lastUpdate"
            android:textColor="@color/textCardColor"
            android:textSize="@dimen/detailSize" />

        <TextView
            android:id="@+id/global_last_update_value_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/textCardColor"
            android:textSize="@dimen/detailSize"
            tools:text="2020-04-20" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>